--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Test
+<!DOCTYPE HTML>
+<html>
+   <head>
+     <title> Test </title>
+  </head>
+  <body>
+    <p> TEST </p>
+  </body>
+  
+</html>
