--- a/about.html
+++ b/about.html
@@ -32,13 +32,13 @@
             </div>
             <div>
                 <p>
-                    The JavaScript code read the text letter by letter and once it finds a space, it determines is a whole word.
+                    The JavaScript code reads the text letter by letter and once it finds a space, it determines is a sigle word.
                     </br>
                     For the first exercise, if the word is equal or longer than 6 letters (>=6), then it replaces with blanks ("_").
                     </br>
-                    For the second exercise, if theword is equal or longer that 3 letters (>=3), then it replaces with blanks ("_").
+                    For the second exercise, if the word is equal or longer that 3 letters (>=3), then it replaces with blanks ("_").
                     </br>
-                    These word lengths can be modified if needed.
+                    These words lengths can be modified if needed.
                 </p>
             </div>
             <div>
