--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     </br>
                     For the second exercise, if the word is equal or longer that 3 letters (>=3), then it replaces with blanks ("_").
                     </br>
-                    These words lengths can be modified if needed.
+                    These word lengths can be modified if needed.
                 </p>
             </div>
             <div>
