--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <label for="comment">Versicle:</label>
           <!--textarea class="form-control" rows="5" id="Versicle"></textarea-->
           <textarea id="myTextarea" class="form-control" rows="4" cols="50">
-            Write or Paste your Text Here</textarea>
+          </textarea>
         </div>
         <button type="button" onclick="myFunction()">Try it</button>
         
